// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kube connect dialogue local 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  min-height: 400px;
  max-width: 600px;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c11 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c9 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c10 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c12:hover,
.c12:focus {
  background: #B29DFF;
}

.c12:active {
  background: #C5B6FF;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c15:hover,
.c15:focus {
  background: rgba(255,255,255,0.13);
}

.c15:active {
  background: rgba(255,255,255,0.18);
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c14 {
  box-sizing: border-box;
}

<body>
  <div />
  <div
    class="c0"
    data-testid="Modal"
  >
    <div
      aria-hidden="true"
      class="c1"
      data-testid="backdrop"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="dialogbox"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
            color="text.main"
          >
            connect to kubernetes cluster
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8"
            >
              Step 1
            </span>
             - Login to Teleport
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 --auth=local --user=sam some-cluster-name
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c8"
            >
              Optional
            </span>
             
            - To write kubectl configuration to a separate file instead of having your global kubectl configuration modified, run the following command:
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  export KUBECONFIG=\${HOME?}/teleport-kubeconfig.yaml
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c8"
            >
              Step 2
            </span>
             - Select the Kubernetes cluster
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh kube login tele.logicoma.dev-prod
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c13"
          >
            <span
              class="c8"
            >
              Step 3
            </span>
             - Connect to the Kubernetes cluster
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  kubectl get pods
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          class="c14"
        >
          <button
            class="c15"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`kube connect dialogue local with requestId 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  min-height: 400px;
  max-width: 600px;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c11 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 16px;
}

.c9 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c10 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c12:hover,
.c12:focus {
  background: #B29DFF;
}

.c12:active {
  background: #C5B6FF;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:hover,
.c16:focus {
  background: rgba(255,255,255,0.13);
}

.c16:active {
  background: rgba(255,255,255,0.18);
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c15 {
  box-sizing: border-box;
}

<body>
  <div />
  <div
    class="c0"
    data-testid="Modal"
  >
    <div
      aria-hidden="true"
      class="c1"
      data-testid="backdrop"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="dialogbox"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
            color="text.main"
          >
            connect to kubernetes cluster
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8"
            >
              Step 1
            </span>
             - Login to Teleport
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 --auth=local --user=sam some-cluster-name --request-id=8289cdb1-385c-5b02-85f1-fa2a934b749f
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c8"
            >
              Optional
            </span>
             
            - To write kubectl configuration to a separate file instead of having your global kubectl configuration modified, run the following command:
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  export KUBECONFIG=\${HOME?}/teleport-kubeconfig.yaml
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c8"
            >
              Step 2
            </span>
             - Select the Kubernetes cluster
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh kube login tele.logicoma.dev-prod
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c13"
          >
            <span
              class="c8"
            >
              Step 3
            </span>
             - Connect to the Kubernetes cluster
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  kubectl get pods
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c14"
          >
            <span
              class="c8"
            >
              Step 4 (Optional)
            </span>
             - When finished, drop the assumed role
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh request drop
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          class="c15"
        >
          <button
            class="c16"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`kube connect dialogue sso 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  min-height: 400px;
  max-width: 600px;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c11 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c9 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c10 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c12:hover,
.c12:focus {
  background: #B29DFF;
}

.c12:active {
  background: #C5B6FF;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c15:hover,
.c15:focus {
  background: rgba(255,255,255,0.13);
}

.c15:active {
  background: rgba(255,255,255,0.18);
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c14 {
  box-sizing: border-box;
}

<body>
  <div />
  <div
    class="c0"
    data-testid="Modal"
  >
    <div
      aria-hidden="true"
      class="c1"
      data-testid="backdrop"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="dialogbox"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
            color="text.main"
          >
            connect to kubernetes cluster
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8"
            >
              Step 1
            </span>
             - Login to Teleport
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 some-cluster-name
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c8"
            >
              Optional
            </span>
             
            - To write kubectl configuration to a separate file instead of having your global kubectl configuration modified, run the following command:
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  export KUBECONFIG=\${HOME?}/teleport-kubeconfig.yaml
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c7"
          >
            <span
              class="c8"
            >
              Step 2
            </span>
             - Select the Kubernetes cluster
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh kube login tele.logicoma.dev-prod
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c13"
          >
            <span
              class="c8"
            >
              Step 3
            </span>
             - Connect to the Kubernetes cluster
            <div
              class="c9"
              color="light"
            >
              <div
                class="c10"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c11"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  kubectl get pods
                </div>
              </div>
              <button
                class="c12"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          class="c14"
        >
          <button
            class="c15"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
